# preparation-api

./: .coveragerc  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci_cd.yml  destroy.yml
docker-compose-env/: app.env.example
docker-entrypoint/: start_api.sh  start_dev_api.sh  start_payment_closed_listener.sh
preparation_api/application/commands/: __init__.py  create_preparation_from_payment.py  mark_preparation_as_completed.py  mark_preparation_as_ready.py
preparation_api/application/use_cases/: __init__.py  create_preparation_from_payment.py  get_waiting_list.py  mark_preparation_as_completed.py  mark_preparation_as_ready.py  start_next_preparation.py
preparation_api/domain/: exceptions.py
preparation_api/domain/entities/: __init__.py  preparation.py
preparation_api/domain/ports/: __init__.py  order_info_provider.py  preparation_repository.py
preparation_api/domain/value_objects/: __init__.py  order_info.py  preparation_status.py
preparation_api/entrypoints/: api.py  payment_closed_listener.py
preparation_api/infrastructure/: config.py  factory.py
settings/: app.env.example  aws.env.example  database.env.example  http_client.env.example  order_api.env.example  payment_closed_listener.env.example
terraform/: k8s_app_configmap.tf  k8s_app_deployment.tf  k8s_app_hpa.tf  k8s_app_ingress_controller.tf  k8s_app_secrets.tf  k8s_app_service.tf  k8s_consumer_hpa.tf  k8s_namespace.tf  k8s_payment_closed_listener.tf  vars.tf
(+22 files in other folders)
